# mcp-project-orchestrator

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AUTOMOTIVE_CAMERA_SYSTEM_SUMMARY.md  AWS_MCP_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  Containerfile  IMPLEMENTATION_STATUS.md  MANIFEST.in  PR12_SPLIT_STRATEGY.md  README.md  SUMMARY.md  TODO.md  component_templates.json  conanfile.py  integration_plan.md  project_orchestration.json  pyproject.toml  requirements.txt  restructure_directories.py  test_openssl_integration.sh
.cursor/: mcp.json
.cursor/commands/: addprompt.md  conan-extensions-openssl.md  conan-toolchain-openssl.md  ddd-openssl.md  ddd-refactoring-openssl.md  development-openssl.md  github-openssl.md  openssl-openssl.md
.cursor/rules/: ai-coding-guidelines.mdc  conan-package-management.mdc  documentation-standards.mdc  fips-compliance.mdc  security-coding-standards.mdc  testing-requirements.mdc
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  ecosystem-monitor.yml  fan-out-orchestrator.yml  release.yml
aws-sip-trunk/: .gitignore  README.md
aws-sip-trunk/config/: pjsip.conf.j2
aws-sip-trunk/docs/: DEPLOYMENT.md
aws-sip-trunk/terraform/: outputs.tf
aws-sip-trunk/tests/: test_sip_connectivity.py
config/: project_orchestration.json
cursor-templates/openssl/: shared.mdc.jinja2
docs/: AWS.md  AWS_MCP.md  CONAN.md  OPENSSL_TOOLS_ORCHESTRATION.md
elevenlabs-agents/: README.md
mcp-project-orchestrator/: AWS_MCP_QUICKSTART.md  Containerfile  project_templates.json  test_openssl_integration.sh
mcp-project-orchestrator/config/: project_orchestration.json
mcp-project-orchestrator/openssl/: pyproject.toml  setup.py
mcp-project-orchestrator/scripts/: README.md
mcp-project-orchestrator/tests/: test_aws_mcp.py  test_base_classes.py  test_prompts.py  test_templates.py
projects/my_awesome_microserv/: README.md
restructured/: DDD_OPENSSL_IMPLEMENTATION_SUMMARY.md  DIRECTORY_STRUCTURE_GUIDE.md  RESTRUCTURE_COMPLETE_SUMMARY.md  RESTRUCTURE_SUMMARY.md
restructured/configs/: project_templates.json
restructured/consumers/automotive-camera/: CMakeLists.txt  README.md  conanfile.py
restructured/consumers/automotive-camera/docs/: IMPLEMENTACE_CS.md
restructured/consumers/aws-sip-trunk/: DEPLOYMENT_SUMMARY.md  PROJECT_INDEX.md  QUICKSTART.md  VERIFICATION_CHECKLIST.md  conanfile.py  pyproject.toml
restructured/consumers/aws-sip-trunk/config/: extensions.conf.j2
restructured/consumers/aws-sip-trunk/docs/: TROUBLESHOOTING.md
restructured/consumers/aws-sip-trunk/scripts/: deploy-asterisk-aws.sh  user-data.sh
restructured/consumers/aws-sip-trunk/terraform/: ec2.tf  main.tf  monitoring.tf  networking.tf  storage.tf  terraform.tfvars.example  variables.tf
restructured/consumers/openssl-ddd-architecture/: CMakeLists.txt  conanfile.py
restructured/consumers/openssl-ddd-architecture/src/application/ssl/: tls1_3.c  tls1_3.h
restructured/consumers/openssl-ddd-architecture/src/domain/crypto/: aes.c  aes.h
restructured/consumers/openssl-ddd-architecture/src/infrastructure/providers/: fips_provider.c  fips_provider.h
restructured/consumers/openssl-ddd-architecture/src/presentation/apps/: openssl_cli.c  openssl_cli.h
restructured/consumers/openssl-tools/: CMakeLists.txt  conanfile.py  openssl_orchestration_main.py  openssl_tools_orchestration.py  openssl_tools_orchestration_example.py  package_manifest.json
restructured/consumers/printcast-agent/: .env.example  Containerfile  README.md  conanfile.py  docker-compose.yml  pyproject.toml
restructured/consumers/printcast-agent/config/asterisk/: extensions.conf
restructured/consumers/printcast-agent/scripts/: docker-entrypoint.sh
restructured/consumers/printcast-agent/src/integrations/: __init__.py  asterisk.py  content.py  delivery.py  elevenlabs.py  printing.py
restructured/consumers/printcast-agent/src/mcp_server/: __init__.py  main.py  server.py
restructured/consumers/printcast-agent/src/orchestration/: __init__.py  workflow.py
restructured/consumers/printcast-agent/tests/: test_mcp_server.py
restructured/docs/: AWS_SIP_TRUNK_DEPLOYMENT_COMPLETE.md  OPENSSL_ORCHESTRATION_IMPLEMENTATION_SUMMARY.md  REFACTORING_COMPLETED.md  REFACTORING_RECOMMENDATIONS.md  TASK_COMPLETION_SUMMARY.md  integration_plan.md
restructured/mcp/mcp-project-orchestrator/openssl/: CURSOR_DEPLOYMENT_POLISH.md  conanfile.py  pyproject.toml  test_deployment.py
restructured/mcp/mcp-project-orchestrator/openssl/cursor-rules/prompts/: fips-compliance.md.jinja2
restructured/mcp/mcp-project-orchestrator/openssl/cursor-rules/rules/: ci-linux.mdc.jinja2
restructured/mcp/mcp-project-orchestrator/openssl/examples/example-workspace/: README.md
restructured/mcp/mcp-project-orchestrator/openssl/examples/example-workspace/src/: crypto_utils.h
restructured/mcp/mcp-project-orchestrator/openssl/mcp_orchestrator/: cli.py  conan_integration.py  env_config.py  yaml_validator.py
restructured/mcp/mcp-project-orchestrator/openssl/tests/: test_cursor_deployer.py
restructured/package_management/: conanfile.py  conanfile.txt
restructured/scripts/: build_all_packages.sh  cloudsmith_upload.py
restructured/templates/openssl/examples/example-workspace/: CMakeLists.txt  conanfile.py
restructured/templates/openssl/examples/example-workspace/.cursor/rules/: shared.mdc
restructured/templates/openssl/examples/example-workspace/profiles/: linux-gcc-debug.profile
restructured/templates/openssl/examples/example-workspace/src/: crypto_utils.cpp  main.cpp
scripts/: CLEANUP.md  consolidate_prompts.py  mcp_test.sh  setup_aws_mcp.sh  setup_claude.sh  setup_claude_desktop.py  setup_docker_config.sh  setup_orchestrator.sh  setup_podman_config.sh  verify_environment.py
scripts/archive/: init_claude_test.sh
src/mcp_project_orchestrator/: __init__.py  __main__.py  fastmcp.py  fips_compliance.py  project_orchestration.py  server.py  skills_enabled_mcp.py
test_package/: conanfile.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_mermaid.py  test_prompts.py
(+113 files in other folders)
