[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-sip-trunk"
version = "1.0.0"
description = "AWS infrastructure deployment for Asterisk SIP trunk with ElevenLabs integration"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "MCP Project Orchestrator" }
]
license = { text = "MIT" }

dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

testing = [
    "pjsua>=2.0.0",  # For SIP testing
    "requests>=2.28.0",
]

[project.scripts]
aws-sip-deploy = "aws_sip_trunk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["aws_sip_trunk*"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I", "W", "N"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=aws_sip_trunk"
testpaths = ["tests"]
